packages/tree-sitter-allium/test/corpus/declarations.txt
==================
Module
==================
module my_module

---

(source_file
  (module_declaration
    name: (identifier)))

==================
Imports
==================
use "std/base"
use "auth" as identity

---

(source_file
  (use_declaration
    path: (string_literal))
  (use_declaration
    path: (string_literal)
    alias: (identifier)))

==================
Rule Declaration
==================
rule my_rule {
  trigger: active
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (clause
        keyword: (clause_keyword)
        value: (identifier)))))

==================
Entity and External Entity
==================
entity User {
  id: string
}

external entity Database {
  connection: string
}

---

(source_file
  (entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))))
  (external_entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier)))))

==================
Value and Enum
==================
value config_val {
  key: "value"
}

enum Status {
  active: "Active"
}

---

(source_file
  (value_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (string_literal))))
  (enum_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (string_literal)))))

==================
Given and Config
==================
given {
  user: current_user
}

config {
  retries: 3
}

---

(source_file
  (given_block
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))))
  (config_block
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (number_literal)))))

==================
Surface and Actor
==================
surface API {
  base_url: "https://api.example.com"
}

actor Bot {
  type: "worker"
}

---

(source_file
  (surface_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (string_literal))))
  (actor_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (string_literal)))))

==================
Default and Variant
==================
default my_instance = {}
default Type named_instance = 123
variant Color: red | blue | green

---

(source_file
  (default_declaration
    name: (identifier)
    value: (block_expression
      (block_body)))
  (default_declaration
    type: (identifier)
    name: (identifier)
    value: (number_literal))
  (variant_declaration
    name: (identifier)
    type: (pipe_expression
      left: (pipe_expression
        left: (identifier)
        right: (identifier))
      right: (identifier))))

==================
Contract Declaration
==================
contract PaymentTerms {
  amount: Decimal,
  currency: String
}

---

(source_file
  (contract_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier)))))

==================
Invariant Declaration
==================
invariant PositiveBalance {
  account.balance > 0
}

---

(source_file
  (invariant_declaration
    name: (identifier)
    body: (comparison_expression
      left: (member_expression
        object: (identifier)
        property: (identifier))
      right: (number_literal))))

==================
Comma-separated Entity Fields
==================
entity Item {
  name: String,
  price: Decimal,
  active: Boolean
}

---

(source_file
  (entity_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier))
      (field_assignment
        key: (identifier)
        value: (identifier)))))
