packages/tree-sitter-allium/test/corpus/expressions.txt
==================
Boolean Precedence
==================
rule p {
  check: a and b or c and not d
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (or_expression
          left: (and_expression
            left: (identifier)
            right: (identifier))
          right: (and_expression
            left: (identifier)
            right: (not_expression
              operand: (identifier))))))))

==================
Comparison and Math
==================
rule c {
  v: a == b + c * d / e
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (comparison_expression
          left: (identifier)
          right: (additive_expression
            left: (identifier)
            right: (multiplicative_expression
              left: (multiplicative_expression
                left: (identifier)
                right: (identifier))
              right: (identifier))))))))

==================
Call and Member Access
==================
rule f {
  v: func(arg1, name: arg2).member.method()
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (call_expression
          function: (member_expression
            object: (member_expression
              object: (call_expression
                function: (identifier)
                arguments: (argument_list
                  (identifier)
                  (named_argument
                    name: (identifier)
                    value: (identifier))))
              property: (identifier))
            property: (identifier)))))))

==================
String Interpolation
==================
rule s {
  msg: "Hello {user}!"
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (string_literal
          (string_interpolation
            (identifier)))))))

==================
Durations
==================
rule d {
  wait: 5.minutes
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (duration_literal)))))

==================
Implies Expression
==================
rule p {
  check: valid implies allowed
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (implies_expression
          left: (identifier)
          right: (identifier))))))

==================
Thin Arrow Expression
==================
rule t {
  sig: value -> ByteArray
}

---

(source_file
  (rule_declaration
    name: (identifier)
    body: (block_body
      (field_assignment
        key: (identifier)
        value: (thin_arrow_expression
          left: (identifier)
          right: (identifier))))))
